@@ -1,3 +1,7 @@
+Sat Sep  7 15:17:42 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Sat Sep  7 15:15:33 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
